styles.css
/* Fonts */
@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Staatliches&display=swap');

body {
    font-family: Staatliches, system-ui, "Segoe UI", Roboto, Helvetica, Arial,
        sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    font-size: 24px;
    min-height: 100vh;
    padding: 0;
    margin: 0;
    --page-max-width: 1440px;
    --page-max-height: 1024px;
    --display-max-height: 100vh;
    --display-min-width: 100vw;
    --content-min-width: 600px;
    --content-optimal-width: 70vw;
    --content-horizontal-padding: 60px;
    --side-panel-max-width: 30vw;
    --side-panel-optimal-width: 30vw;
    --side-panel-min-width: 10vw;
    --text-input-field-height: 20px;
    --header-font-family: Nunito, system-ui, "Segoe UI", Roboto, Helvetica, Arial,
        sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

li {
    list-style: none;
}

.main {
    display: flex;
    flex-direction: row-reverse;
    max-height: var(--display-max-height, 100vh);
    min-width: var(--display-min-width, 100vh);
}

.content {
    display: flex;
    flex-direction: column;
    width: max(var(--content-min-width, 600px), var(--content-optimal-width, 70vw));
    background-color: rgb(240, 243, 245);
}
.header-section {
    color: rgb(30, 30, 30);
    flex-shrink: 1;
    padding: 160px var(--content-horizontal-padding, 30px) 30px;
    font-family: var(--header-font-family);
    font-weight: bold;
    line-height: 1.2em;
}
.form-title {
    color: rgb(30, 30, 30);
    background-color: white;
    padding: 20px var(--content-horizontal-padding, 30px) 0px;
    font-family: var(--header-font-family);
    font-weight: bold;
}
.requirement-info {
    padding: 30px var(--content-horizontal-padding, 30px) 0px;
    font-family: var(--header-font-family);
    font-size: 0.5em;
    background-color: white;
}
.form-content-inputs {
    display: flex;
    flex-wrap: wrap;
    padding: 10px var(--content-horizontal-padding, 30px) 44px;
    font-family: var(--header-font-family);
    background-color: white;
    box-shadow: 6px 6px 5px rgba(60, 60, 60, 0.3);
}
.form-content-inputs-container {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 24px 70px;
    width: 560px;
    padding-bottom: 0.7em;
}
.form-content-inputs input {
    font-size: 0.6em;
    border-radius: 6px;
    border: 1px solid #000;
    min-width: 80px;
    width: 220px;
    height: var(--text-input-field-height, 20px);
}
.form-content-inputs input:not(:placeholder-shown):invalid {
    outline-color: red;
    background-color: rgba(255, 106, 106, 0.18);
    border-color: red;
}
.form-content-inputs input:not(:placeholder-shown):valid {
    outline-color: rgb(31, 187, 0);
    background-color: rgba(123, 255, 106, 0.18);
    border-color: rgb(31, 187, 0);
}
.form-content .form-input-label {
    position: relative;
    display: block;
    font-size: 0.5em;
    font-weight: bold;
    margin-bottom: -6px;
    letter-spacing: 0.08em;
    color: rgb(32, 32, 32);
}
.form-content .form-input-label::before {
    position: absolute;
    color: red;
    content: "";
    font-weight: normal;
    top: calc(var(--text-input-field-height, 20px) + 22px);
}
.form-content-inputs input:not(:placeholder-shown):not(:focus):valid ::before {
    color: transparent;
}
.form-content .form-input-label:hover::before {
    color: blue;
}
.form-content .form-input-label.label-first-name::before {
    content: "Please enter a valid name";
}
.form-content .form-input-label.label-last-name::before {
    content: "Please enter a valid name";
}
.form-content .form-input-label.label-email::before {
    content: "Please enter a valid email address";
}
.form-content .form-input-label.label-password-primary::before {
    content: "Passwords do not match";
}
.password-requirements {
    align-self: flex-end;
}
.password-requirements div {
    font-size: 0.6em;
}
.password-requirements li {
    list-style: square;
    font-size: 0.5em;
    color: rgb(11, 175, 11);
}
.form-content button {
    color: rgb(235, 235, 235);
    background-color: #596D48;
    border: 0px;
    border-radius: 10px;
    font-size: 0.7em;
    font-weight: bold;
    padding: 18px 54px;
    margin: 44px var(--content-horizontal-padding, 30px) 36px;
    box-shadow: 4px 4px 5px rgba(60, 60, 60, 0.2);
}
.form-content button:hover {
    color: rgb(255, 255, 255);
    background-color: #6d8a54;
}
.form-content button:active {
    color: rgb(212, 212, 212);
    background-color: #3e4d32;
}
.log-in {
    font-family: var(--header-font-family);
    font-size: 0.7em;
    font-weight: bold;
    text-decoration: none;
    padding: 0px var(--content-horizontal-padding, 30px);
}
.log-in-link {
    text-decoration: none;
    color: rgb(37, 110, 37);
}
.log-in-link:hover {
    color: rgb(35, 170, 35);
}
.log-in-link:active {
    color: rgb(18, 71, 18);
}

.side-panel {
    width: clamp(var(--side-panel-min-width, 200px), var(--side-panel-optimal-width, 30vw), var(--side-panel-max-width, 400px));
    height: var(--display-max-height, 100vh);
    position: relative;
    background-image: url(./img/hamdhulla-shakeeb-seaside-unsplash.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: auto clamp(600px, var(--display-max-height, 100vh), 100vh);
}
.logo {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 10px;
    position: absolute;
    top: 25vh;
    width: inherit;
    background-color: rgba(0, 0, 0, 0.6);
    opacity: 1;
}
.logo .company-name {
    text-align: center;
    font-size: 4em;
    color: rgb(226, 226, 226);
}
.logo img {
    width: 4em;
    padding: 20px 10px;
}
.credit {
    position: absolute;
    bottom: 0px;
    width: inherit;
    font-family: var(--header-font-family);
    text-align: center;
    font-size: 0.6em;
    font-weight: bold;
    color: rgb(226, 226, 226);
    background-color: rgba(0, 0, 0, 0.6);
}
.credit a {
    color: rgb(39, 189, 39);
    text-decoration: none;
}
.credit a:hover {
    color: rgb(66, 228, 66);
}
.credit a:active {
    color: rgb(24, 139, 24);
}

